--- a/index.html
+++ b/index.html
@@ -107,103 +107,107 @@
           <td><a href="https://drive.google.com/open?id=13pufO96YyamNlduoxXADiXFBNNhUkJes" target="_blank">Ir aquí</a></td>
         </tr>
         <tr class="table-light" id="enca">
-          <th scope="row">6. Documentación de proyectos</th>
+          <th scope="row">6. Desarrollo de documentos</th>
+          <td><a href="https://drive.google.com/open?id=16TJn0SfFP3ab_jQAy3mDMANiwT2ZI_RM" target="_blank">Ir aquí</a></td>
+        </tr>
+        <tr class="table-info" id="enca">
+          <th scope="row">7. Documentación de proyectos</th>
           <td><a href="https://drive.google.com/open?id=1Sfw-xhjhgGvrvg1i5IhMcJtyWnrhaqwV" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-info" id="enca">
-          <th scope="row">7. Empresa</th>
+        <tr class="table-light" id="enca">
+          <th scope="row">8. Empresa</th>
           <td><a href="https://drive.google.com/open?id=1gGFk_Ymk4eGvggYuiHPHwKa2cSNYnWOo" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-light" id="enca">
-          <th scope="row">8. Encuestas</th>
+        <tr class="table-info" id="enca">
+          <th scope="row">9. Encuestas</th>
           <td><a href="https://drive.google.com/open?id=1U7Rj-O8cB0DguwhjDcNB5qdXwLQL-8kq" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-info" id="enca">
-          <th scope="row">9. Guías de evaluación</th>
+        <tr class="table-light" id="enca">
+          <th scope="row">10. Guías de evaluación</th>
           <td><a href="https://drive.google.com/open?id=1j2KzZMhHdMSxFdM8VJEoWGUyrfBZu-V5" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-light" id="enca">
-          <th scope="row">10. Informe de medidas correctivas </th>
+        <tr class="table-info" id="enca">
+          <th scope="row">11. Informe de medidas correctivas </th>
           <td><a href="https://drive.google.com/open?id=1DEJX9wk1g7f2VEj_cmR0dlg0R2aU9y--" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-info" id="enca">
-          <th scope="row">11. Informe de minutas</th>
+        <tr class="table-light" id="enca">
+          <th scope="row">12. Informe de minutas</th>
           <td><a href="https://drive.google.com/open?id=1LzovXC3L9qHw9SwJ9uXAT1NrFlWyizxQ" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-light" id="enca">
-          <th scope="row">12. Informe de procedimientos de capacitaciones </th>
+        <tr class="table-info" id="enca">
+          <th scope="row">13. Informe de procedimientos de capacitaciones </th>
           <td><a href="https://drive.google.com/open?id=1w32DEi0QM88tP1uldsw9eA0KPHzvIswV" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-info" id="enca">
-          <th scope="row">13. Informe de procedimientos Empresa </th>
+        <tr class="table-light" id="enca">
+          <th scope="row">14. Informe de procedimientos Empresa </th>
           <td><a href="https://drive.google.com/open?id=18gHK8QSvZ8D1RDumJk8b85B5zBu6raXJ" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-light" id="enca">
-          <th scope="row">14. Informe de programa </th>
+        <tr class="table-info" id="enca">
+          <th scope="row">15. Informe de programa </th>
           <td><a href="https://drive.google.com/open?id=1a_SFozKeBflKNwzJV2RA3TrBSYy9xFRo" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-info" id="enca">
-          <th scope="row">15. Informe de requerimientos</th>
+        <tr class="table-light" id="enca">
+          <th scope="row">16. Informe de requerimientos</th>
           <td><a href="https://drive.google.com/open?id=1RSbMXb3pvTQz4H0zJtYAw4ifjg1IVGUe" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-light" id="enca">
-          <th scope="row">16. Informe reunión con as2</th>
+        <tr class="table-info" id="enca">
+          <th scope="row">17. Informe reunión con as2</th>
           <td><a href="https://drive.google.com/open?id=1WNGeZzjZggICDBE429KVyVKXLGYIRRkW" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-info" id="enca">
-          <th scope="row">17. Informe sorteo micro casos</th>
+        <tr class="table-light" id="enca">
+          <th scope="row">18. Informe sorteo micro casos</th>
           <td><a href="https://drive.google.com/open?id=1ndPDbVRngVCJOh2Jj0zQ2J8MhZ9Wy8Q3" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-light" id="enca">
-          <th scope="row">18. Informes de capacitación</th>
+        <tr class="table-info" id="enca">
+          <th scope="row">19. Informes de capacitación</th>
           <td><a href="https://drive.google.com/open?id=1CQLugK0incgEa_AHScmm-p3N1xwJcvyv" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-info" id="enca">
-          <th scope="row">19. Infraestructura</th>
+        <tr class="table-light" id="enca">
+          <th scope="row">20. Infraestructura</th>
           <td><a href="https://drive.google.com/open?id=19ZOu0w_iUXUACW-XYsgMuxTtsbsorIiJ" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-light" id="enca">
-          <th scope="row">20. Minuta Capacitaciones </th>
+        <tr class="table-info" id="enca">
+          <th scope="row">21. Minuta Capacitaciones </th>
           <td><a href="https://drive.google.com/open?id=1hVynUVExKjR2fxu617Uscf7z3aK233q1" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-info" id="enca">
-          <th scope="row">21. Minuta Coordinación y empresa</th>
+        <tr class="table-light" id="enca">
+          <th scope="row">22. Minuta Coordinación y empresa</th>
           <td><a href="https://drive.google.com/open?id=1jbFkCHuwUw0X5I4KSPEbWrRK-5n-OIGZ" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-light" id="enca">
-          <th scope="row">22. Minuta Correspondencia </th>
+        <tr class="table-info" id="enca">
+          <th scope="row">23. Minuta Correspondencia </th>
           <td><a href="https://drive.google.com/open?id=1nmGdAWfD2mXDRwp1UJiWsWwT1NxUTfW-" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-info" id="enca">
-          <th scope="row">23. Minuta de Requerimientos/ Depuración</th>
+        <tr class="table-light" id="enca">
+          <th scope="row">24. Minuta de Requerimientos/ Depuración</th>
           <td><a href="https://drive.google.com/open?id=19ttsvB5h2QGGAyKCiNAsaaTHz6p_7615" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-light" id="enca">
-          <th scope="row">24. Minuta Infraestructura </th>
+        <tr class="table-info" id="enca">
+          <th scope="row">25. Minuta Infraestructura </th>
           <td><a href="https://drive.google.com/open?id=1CwPWcj4w0YNmO2HjOHuFuiDb5yF0Eq57" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-info" id="enca">
-          <th scope="row">25. Minuta Globales</th>
+        <tr class="table-light" id="enca">
+          <th scope="row">26. Minuta Globales</th>
           <td><a href="https://drive.google.com/open?id=1EmOP-W-6u03lppbe8VrtMY9u3yi8_rpF" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-light" id="enca">
-          <th scope="row">26. Planificación </th>
+        <tr class="table-info" id="enca">
+          <th scope="row">27. Planificación </th>
           <td><a href="https://drive.google.com/open?id=1mHpHFNjRP25CK-4XJHd0dOg1J5-8mlSG" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-info" id="enca">
-          <th scope="row">27. Requerimientos</th>
+        <tr class="table-light" id="enca">
+          <th scope="row">28. Requerimientos</th>
           <td><a href="https://drive.google.com/drive/folders/1DzSVM2EaE3bmjXEKzdbnrM0KMXx7Cb_L"  target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-light" id="enca">
-          <th scope="row">28. Revisión de capacitación </th>
+        <tr class="table-info" id="enca">
+          <th scope="row">29. Revisión de capacitación </th>
           <td><a href="https://drive.google.com/open?id=1o3qLHhtgGSVipHi9A_40_yUv7qkckHUx" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-info" id="enca">
-          <th scope="row">29. Rúbrica</th>
+        <tr class="table-light" id="enca">
+          <th scope="row">30. Rúbrica</th>
           <td><a href="https://drive.google.com/open?id=1eVhKFPcvaK_xxkIx4RVS-IyPM_35cRy-" target="_blank">Ir aquí</a></td>
         </tr>
-        <tr class="table-light" id="enca">
-          <th scope="row">30. Seguimiento de minutas</th>
+        <tr class="table-info" id="enca">
+          <th scope="row">31. Seguimiento de minutas</th>
           <td><a href="https://drive.google.com/open?id=1nodbTPURsMArvFSAOQve3EmMpxBPmPWP" target="_blank">Ir aquí</a></td>
         </tr>
       </tbody>
