--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   </div>
   <style type="text/css">
   #todo {
-    background-color: #EEECEC;
+    background-color: #70625F;
   }
 
   #titulo{
